objects/Account.object
<CustomObject>
    <fields>
        <fullName>Commits_to_or_achieves_Certified_status__c</fullName>
        <description>The Partner is certified as a Gold, Silver, Bronze Partner</description>
        <inlineHelpText>Commits To Or Achieves A Certified Status</inlineHelpText>
        <label>TO BE DELETED Certified Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Committed_to_advanced_Specialization__c</fullName>
        <description>Does the Partner have or is the Partner interested in developing advanced Product specialiaztions.</description>
        <inlineHelpText>Committed To Advanced Specialization</inlineHelpText>
        <label>TO BE DELETED Advanced Specialization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Committed_to_leading_with_Cisco__c</fullName>
        <description>Does the Partner try to sell Cisco product before selling other vendors products.</description>
        <inlineHelpText>Committed To Leading With Cisco</inlineHelpText>
        <label>TO BE DELETED Leads With Cisco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyRegistrationNumber__c</fullName>
        <label>zzWinning Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Focus__c</fullName>
        <description>APAC specific</description>
        <label>Competitive Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3Com</fullName>
                </value>
                <value>
                    <fullName>Alcatel</fullName>
                </value>
                <value>
                    <fullName>Allied Telesis</fullName>
                </value>
                <value>
                    <fullName>Atrica</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Avici</fullName>
                </value>
                <value>
                    <fullName>BinTec Communications</fullName>
                </value>
                <value>
                    <fullName>Boda</fullName>
                </value>
                <value>
                    <fullName>Brocade</fullName>
                </value>
                <value>
                    <fullName>Cabletron</fullName>
                </value>
                <value>
                    <fullName>Charlotte's Web</fullName>
                </value>
                <value>
                    <fullName>Checkpoint</fullName>
                </value>
                <value>
                    <fullName>Ciena</fullName>
                </value>
                <value>
                    <fullName>Clarent</fullName>
                </value>
                <value>
                    <fullName>Cosine</fullName>
                </value>
                <value>
                    <fullName>Da Tang</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Digital China</fullName>
                </value>
                <value>
                    <fullName>Dlink</fullName>
                </value>
                <value>
                    <fullName>Enterasys</fullName>
                </value>
                <value>
                    <fullName>Ericsson</fullName>
                </value>
                <value>
                    <fullName>Extreme Networks</fullName>
                </value>
                <value>
                    <fullName>F5</fullName>
                </value>
                <value>
                    <fullName>Force10</fullName>
                </value>
                <value>
                    <fullName>Foundry Networks</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>Harbour Networks</fullName>
                </value>
                <value>
                    <fullName>Hewlett Packard</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Continuance_Strategy__c</fullName>
        <label>zzLosing Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Active_Opps__c</fullName>
        <label>Count of Active Opps</label>
        <summaryFilterItems>
            <field>Opportunity.Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_CEE__c</fullName>
        <description>Number of CEE on an Account</description>
        <label>Count of CEE</label>
        <summaryForeignKey>CEE__c.Primary_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Opportunities__c</fullName>
        <description>Count of Opportunties</description>
        <label>Count of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country_English__c</fullName>
        <description>non-English profiles</description>
        <label>Country (English)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_English__c</fullName>
        <description>Contains the County name of the Account.</description>
        <label>County (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County is more reasonably sized unit - bigger than a city but not as big as an entire State - is necessary to sort Accounts geographically in order to better manage local Partner engagement.</description>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_FY_Bookings_000__c</fullName>
        <description>Current Fiscal Year bookings in thousands per Customer Intelligence data source for the end customer</description>
        <label>Current FY Bookings ($000)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_RAD_Segment__c</fullName>
        <description>Value of Current FY Wallet Type &amp; Current FY RAD Strategy</description>
        <formula>TRIM(TEXT(Current_FY_Wallet_Type__c)) &amp; ' ' &amp; TRIM(Current_FY_RAD_Strategy__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FY RAD Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_FY_RAD_Strategy__c</fullName>
        <description>Current user end user wallet share (Retain, Develop, Acquire) as segmented within the RAD model

FY14 Q2 P360 Release Update: Changed the Data Type from Picklist to Text</description>
        <label>Execution-Current FY Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_FY_Wallet_Share_YTD__c</fullName>
        <description>Current Fiscal Year bookings as a percentage of Current Fiscal Year total wallet as per Customer Intelligence data source for the end customer</description>
        <label>Current FY Wallet Share YTD (%)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_FY_Wallet_Total_000__c</fullName>
        <description>Current Fiscal Year total wallet in thousands per Customer Intelligence data source for the end customer</description>
        <label>Current FY Wallet-Total ($000)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Wallet_Type__c</fullName>
        <description>Current user end user wallet type (High, Medium, Low) as segmented within the RAD model</description>
        <label>Current FY Wallet Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_PEF_Stage__c</fullName>
        <description>Indicates the current classification stage of the Partner.  For example, are they in the Recruit stage or the Grow stage or the Manage stage or the Accelerate stage.</description>
        <label>TO BE DELETED Current PEF Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recruit</fullName>
                    <default>true</default>
                    <label>Recruit</label>
                </value>
                <value>
                    <fullName>Grow</fullName>
                </value>
                <value>
                    <fullName>Manage</fullName>
                </value>
                <value>
                    <fullName>Accelerate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Intimacy_Index_CII__c</fullName>
        <label>Customer Intimacy Index(CII)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-No Contact with CIO</fullName>
                </value>
                <value>
                    <fullName>2-Irregular and/or informal contact with CIO</fullName>
                </value>
                <value>
                    <fullName>3-Irregular meetings, involving Cisco resources</fullName>
                </value>
                <value>
                    <fullName>4-Engage with CIO on specific biz-related topics</fullName>
                </value>
                <value>
                    <fullName>5-Regular meetings with CIO(min 4/Yr), min 1 EBC/Yr</fullName>
                </value>
                <value>
                    <fullName>1-キーエグゼクティブ（KE）未特定またはコンタクトなし。</fullName>
                </value>
                <value>
                    <fullName>2-KEとのミーティングあり。</fullName>
                </value>
                <value>
                    <fullName>3-KEと定期的に（要望に応じ）会い具体的な案件の話ができる。</fullName>
                </value>
                <value>
                    <fullName>4-両社エグゼクティブでC-Bridgeを実施。</fullName>
                </value>
                <value>
                    <fullName>5-KEと共に他部門への提案・推進活動を実施。</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Registry_Details__c</fullName>
        <description>Concatenation of CR Fields</description>
        <formula>"GU ID  :  " + GU_ID__c +  BR() +
"HQ Party ID  :  "+ HQ_Party_ID__c +  BR() +
"Party ID  :  "+ CSCSiteID__c + BR()  + 
BR()+
"Name  :  " + CRName__c +  BR()  +
"Address1  :  "+ CRAddressLine1__c +  BR() +
"Address2  :  "+ CRAddressLine2__c + BR() +
"City  :  "+ CRCity__c +  BR() +
"State  :  "+ CRState__c +  BR() +
"Country  :  "+ CRCountry__c +  BR() +
"Zip  :  "+ CRZipPostalCode__c +  BR() + 
BR()+
BR()+
"Integrated with CR  :  "+  End_Customer_Account_Integrated_with_CR__c +  BR() +
IF(End_Customer_Account_Integrated_with_CR__c == 'No' &amp;&amp; ISBLANK(error_description__c) &amp;&amp;  ISBLANK(TOKENID__c) &amp;&amp;  ISBLANK(CSCSiteID__c) &amp;&amp;  ISBLANK(HQ_Party_ID__c) &amp;&amp;  ISBLANK(GU_ID__c) , 
  'Please Refresh your browser', 
  IF(End_Customer_Account_Integrated_with_CR__c == 'No' &amp;&amp; NOT(ISBLANK(error_description__c)), 
      'Account Not Integrated with Customer Registry ' &amp;  HYPERLINK("https://cisco.service-now.com/sp?id=sc_cat_item&amp;sys_id=a9860b89dbd9a640cb5772fc0f96191d&amp;u_business_service=68c0fee5db95c34063339c26db96194b", "Open a Case" ,"_blank"), '')) +  
BR() + 
BR() + 
IF(End_Customer_Account_Integrated_with_CR__c != 'Yes', "Error Description  :  "+   error_description__c,'')</formula>
        <label>Customer Registry Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Rollup_Renewals__c</fullName>
        <label>Customer Rollup Renewals</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Renewals Opportunity</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>contains</operation>
            <value>1 - Prospect, 2 - Qualification, 3 - Proposal, 4 - Agreement, Planning, Customer Accepted, Implementing, Complete, Not Implemented</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Total_ARR_BU__c</fullName>
        <formula>If (Parent.RecordTypeId == $Setup.ObjectRecordTypeIds__c.Account_Customer_RecordTypeId__c,Parent.Customer_Total_ARR__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Total ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Total_ARR__c</fullName>
        <label>Customer Total ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Total_Attrition_BU__c</fullName>
        <formula>If (Parent.RecordTypeId == $Setup.ObjectRecordTypeIds__c.Account_Customer_RecordTypeId__c,Parent.Customer_Total_Attrition__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Total Attrition</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Total_Attrition__c</fullName>
        <label>Customer Total Attrition</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Total_iARR_BU__c</fullName>
        <formula>If (Parent.RecordTypeId == $Setup.ObjectRecordTypeIds__c.Account_Customer_RecordTypeId__c,Parent.Customer_Total_iARR__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Total iARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Total_iARR__c</fullName>
        <label>Customer Total iARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DBR_Expiration_Date__c</fullName>
        <description>Digital Business Roadmap Expiration Date
Business Architect Expiration Date</description>
        <label>Business Architect Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DSE_Owner_Name__c</fullName>
        <formula>Owner.FirstName +" "+Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSE Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE_Time_Stamp__c</fullName>
        <label>DSE Time Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DUNSNumber__c</fullName>
        <label>zzD&amp;B Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Center_Financed_By__c</fullName>
        <description>The data center of customer is financed by, if any.</description>
        <label>TO BE DELETED Data Center Financed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIT</fullName>
                </value>
                <value>
                    <fullName>GE Capital</fullName>
                </value>
                <value>
                    <fullName>HP Financial Services</fullName>
                </value>
                <value>
                    <fullName>IBM Global Financing</fullName>
                </value>
                <value>
                    <fullName>Local Bank</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Center_Installed_Base__c</fullName>
        <description>Type of data center base which are installed</description>
        <label>Data Center Installed Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MDS</fullName>
                </value>
                <value>
                    <fullName>65xxx/49xx products sold in DC</fullName>
                </value>
                <value>
                    <fullName>WAAS Ace</fullName>
                </value>
                <value>
                    <fullName>XML</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Provider__c</fullName>
        <label>Data Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <label>Data Source Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>De_Dup_Comments__c</fullName>
        <description>De dup Comments</description>
        <label>De Dup Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>De_Dup_Winning_Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Winning Account ID identified by Account de dup</description>
        <label>De Dup Winning Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>De Dup Accounts</relationshipLabel>
        <relationshipName>De_Dup_Winning_Account_ID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dedicated_Cisco_champion__c</fullName>
        <description>The Partner is a strong supporter of Cisco products.</description>
        <label>TO BE DELETED Dedicated Cisco Champion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployed_Blade_Servers__c</fullName>
        <description>Has the customer deployed blade servers</description>
        <label>Deployed Blade Servers?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployed_Virtualization_Production_Env__c</fullName>
        <description>This field captures the information about Deployed Virtualization</description>
        <label>TO BE DEL DeployedVirtualization(ProdEn)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <label>Deployment No</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Business_Roadmap_DBR_Link__c</fullName>
        <description>Digital Business Roadmap URL for the account</description>
        <label>Digital Business Roadmap (DBR) Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DistributionChannels__c</fullName>
        <label>Distribution Channels</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Cisco_has_CxO_level_relationship__c</fullName>
        <description>Does Cisco has any CXO level relationship with the customer</description>
        <label>TO BE DELETED Has CxO LevelRelationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dollar4Dollar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As per QW-3119 this field is added for EU users and will be made read-only for all end user profiles.</description>
        <label>TO BE DELETED $4$</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EM_Account_Potential__c</fullName>
        <description>Readonly field that represents Account Potential$ for Emerging Markets. Field will be updated only by Support QW-4373</description>
        <label>TO BE DELETED EM Account Potential$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Early_Adopter__c</fullName>
        <description>Is customer early adopter of new technologies</description>
        <label>TO BE DELETED Early Adopter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emerging_Multinational_Accounts__c</fullName>
        <description>This field was added as a part of July release. Reference QW 3672. This field species if the Account is a Multinational Account or not</description>
        <inlineHelpText>If your account is MN and this flag isn’t set to YES please contact GSTS.</inlineHelpText>
        <label>Multinational Accounts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Customer_Account_Integrated_with_CR__c</fullName>
        <defaultValue>IF( $RecordType.Id = $Setup.ObjectRecordTypeIds__c.Account_End_User_RecordTypeId__c, 'No','')</defaultValue>
        <description>End Customer Account Integrated with Customer Registry</description>
        <label>End Customer Account Integrated with CR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exact_No_of_PC_s__c</fullName>
        <description>This field was added as a part of July release. Reference QW 3528. This field stores the exact no of PCs' that are used by accounts. Visible only for Emerging Market</description>
        <label>TO BE DELETED Exact No of PC’s</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Data_Center_Products__c</fullName>
        <description>Information about the existing data center products of the customer</description>
        <label>TO BE DEL Existing Data Center Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2K</fullName>
                </value>
                <value>
                    <fullName>5K</fullName>
                </value>
                <value>
                    <fullName>7K</fullName>
                </value>
                <value>
                    <fullName>1000v</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Booking_Other__c</fullName>
        <label>Expected Booking Other</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Bookings_Collab_App_000__c</fullName>
        <label>Potential Bookings-Collab App ($000)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Bookings_Collab_Voice_000__c</fullName>
        <label>Potential Bookings-Collab Voice ($000)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
</CustomObject>